added a paragraph and a stylesheet

--- a/index.html
+++ b/index.html
@@ -3,10 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
+
 </head>
 <body>
     <h1> I am doing things </h1>
     
+    <p> Hello, I am currently typing out a sentence. 
+        Hopefully it is really cool.
+    </p>
+
 </body>
 </html>
