replaced paragraph with image

--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
 <body>
     <h1> I am doing things </h1>
     
-    <p> Hello, I am currently typing out a sentence. 
-        Hopefully it is really cool.
-    </p>
+    <img src="Bear_pic.jpg" alt="Bear">
 
 </body>
 </html>
