added a paragraph... again

--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
     
     <img src="Bear_pic.jpg" alt="Bear">
 
+    <p>
+        Here is a new change I am adding since we are not using Bootstrap.
+
+    </p>
 </body>
 </html>
